k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    name: ingress-nginx
  namespace: etna-rank
  name: ingress-nginx
spec:
  rules:
  - host: app.21a6c45e-0efa-4ac9-8bbb-8b7fc76d40f5.nodes.k8s.fr-par.scw.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
